--- a/UD3 - Estructura del programa JavaScript/Control de Flux/index.html
+++ b/UD3 - Estructura del programa JavaScript/Control de Flux/index.html
@@ -6,7 +6,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Expressions i Declaracions</h1>
+		<h1>Control de Flux</h1>
 		<script src="script.js"></script>
 	</body>
 </html>
